// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "1a4022d88c4664",
  "0042864d705045",
  "1389d8fbe3d1d7",
  "1896131012a071",
  "14bdb5ed135628",
  "1b8b88e2b59161",
  "14b7af2ac46b47",
  "19fe81306d9c47",
  "15d63cb1d5e66e",
  "0470c6d84e3c67",
  "07ec87883d8303",
  "1d3a0099489da5",
  "08d45183dcd398",
  "1f29aac941495d",
  "06e650fcbd4258",
  "19665ba9607ccc",
  "16e29531272f46",
  "14be276eb26cdb",
  "042502798363a0",
  "04ce84f4edc46d",
  "008586f6e5016f",
  "1152ee5e00a9c5",
  "0fcd003aa134fd",
  "0a7bc7a19c196d",
  "125dbaaacc6ada",
  "062a3b221afa5e",
  "0461bf4f76e5ce",
  "0a11b20f6f8421",
  "02fe5a1328f840",
  "177af8ff308856",
  "16b00af750951d",
  "065e70dc61cd8b",
  "09b9f6957e0275",
  "115289b128a9eb",
  "145375b3131731",
  "099a09697da63b",
  "1bad7695eb727d",
  "1297ba12699dd7",
  "1027d175414fd4",
  "18bfda5db6b7c0",
  "0f6a96864a7d1c",
  "11ee5b2ef8a84a",
  "1df30512265ee3",
  "16c1f7ed724256",
  "090002547a9be0",
  "0e6180a4d204bd",
  "1fc8235f4e6e12",
  "126afb0c3d108d",
  "111b121baf1d29",
  "03e1fd9833de0b",
  "0896eba65043ec",
  "0042c8b0dbc7cc",
  "0a1fd1a7f95e9f",
  "03c40c6671517a",
  "175c79f1c50360",
  "028eccb4d478f1",
  "0739140e48ed10",
  "0c6f4618157976",
  "0ffc50484d6866",
  "0270a2bfaf05bf",
  "12c1fc9f7fc0d9",
  "004e300a6f7d87",
  "02ce6e7044cbb9",
  "1313eec92d401f",
  "1fcc44676f07a6",
  "1da704f12ce7c1",
  "1e1e93ff1af5b6",
  "1fe2840f959062",
  "173fd30a5534b1",
  "1bb4d8b21fa683",
  "1954e0a9850b09",
  "047a62b9b02c4e",
  "1a6bbb5d9d94ea",
  "15830f3419d348",
  "1ba5e722b2e619",
  "065241a9c959ad",
  "0291eedc019155",
  "01e3368ba0baed",
  "1e0c9dae21c114",
  "04863f750ab0cc",
  "02edbbe9941b08",
  "1fc5e3fcf790be",
  "19127d4f8dda46",
  "111ef3f302ae86",
  "0ff89629c81485",
  "097a994b908d60",
  "03d468c993bd1c",
  "09a6812b9e250c",
  "16d3b2309aeac0",
  "0ff6fabc66b7ba",
  "0ee54fb969c364",
  "0747a646561ee9",
  "0e4db3569f7cc6",
  "0033c969cdb65f",
  "1e2c800c7488d4",
  "151a4865e792cc",
  "0e6b7596b44e8f",
  "1947165702ac97",
  "1c574559d2cf70",
  "0b3ec2e0ea6e2f",
  "154a636b1a1f3d",
  "10ba1c2802515d",
  "1bc4cd3d45ead7",
  "04cd3cdbc9ff33",
  "033ca8dc6b9aef",
  "1a4f8db291bb10",
  "0c44376eada360",
  "0783c69b15c18d",
  "0e197672f7af36",
  "00fd4a639091ab",
  "1e177cfec9272e",
  "0c899f8d401940",
  "072006f3087ef9",
  "12d71a8ace6731",
  "082e43ace66a07",
  "1d26559e1226c9",
  "10cce259f4d096",
  "0468c69bc0a9ad",
  "008d74ba2091b2",
  "1ac1c5677e4819",
  "0883dac6baf369",
  "001a9dad65f23d",
  "0791ce03e105c0",
  "1d986c7c1ea54b",
  "0fb51aa3efc7ba",
  "07be4ef8728833",
  "0ab2fc2fa7167b",
  "04eba5af6cbae0",
  "05c2f4bf09ac38",
  "19e6811a37b2d9",
  "19f8acc4450ec3",
  "0e85c71d729c78",
  "0b37efc186d79e",
  "1bc92e2652560a",
  "064e9e20a2cb3e",
  "0cf1974c943a26",
  "1b7bbbae04faf2",
  "19bdf738ac2d5d",
  "10761e7f06747a",
  "12c61b266472ac",
  "1d0cab7b9d421c",
  "168027fa6cdd66",
  "18c189019061ed",
  "0004c8f44c8226",
  "19884ca4bbf558",
  "070c1cf4f44b00",
  "0e66012806bf98",
  "02be43e84e6980",
  "041b18bac0fc6a",
  "189ac7d14cd787",
  "172d3cde768b9f",
  "0eb3ed56fcd01c",
  "17dedaf9e4f5cb",
  "089e333abbf3d6",
  "09d5afcf41f056",
  "09476badc63922",
  "0c9a478b190f14",
  "173ceaf89bc57c",
  "183e6fa57f13e3",
  "0c2b86db737d53",
  "0be15362d6a5d7",
  "08d10a38c2c38b",
  "081b9986e438a0",
  "14435ab1785d15",
  "1c3a064089f63e",
  "1a81119a81e974",
  "133ead5c70bdee",
  "05e01678a68006",
  "1df3d4cc790ab6",
  "0389828a6c9919",
  "1c1d4048ddd442",
  "1cdd2b47efc949",
  "1f3d23736923b8",
  "192a31d6071c12",
  "0fad1ff3e96c11",
  "0c1e5dcea3bc4e",
  "06df1547ce295e",
  "1db89cfed42bed",
  "13a023cb7733af",
  "0191962f157852",
  "1e9d8faaad194a",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "04548bb22a644c",
  "09c06eafe64ddd",
  "0e60bf400f1771",
  "1c862913173a2f",
  "1fbef160ba5563",
  "1e8799430be7db",
  "1a2cf1329544d4",
  "0120b2dd32442a",
  "0fb908cd5a39b9",
  "11ec605b320f65",
  "1ab472389f2bc6",
  "0c65032775dffc",
  "0a9b5966fde713",
  "02caefbfe89a09",
  "150369c7fccae5",
  "1be9eb5d6b1dbc",
  "0cbee0eec7335a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "14b265b13b0a70",
  "123ae2de91cb0f",
  "1e58d3b5e46062",
  "0c280608473dc1",
  "131db521b32dd4",
  "0f108d6b7b6fd0",
  "14b7af2ac46b47",
  "18ab0fcaec7f21",
  "15d63cb1d5e66e",
  "022e59dc205d61",
  "0a2af90a72269f",
  "1308626d4251de",
  "07a1db3c4483e2",
  "146fcb9d61e9eb",
  "1eabfe9a425031",
  "0c283441650d8b",
  "16e29531272f46",
  "005cae0faba801",
  "0c8ae9c781bddf",
  "16b9becbe1ea5c",
  "0d76a9dce25b89",
  "1fd1cb52908921",
  "1dd996b5b3efbc",
  "0cb2c1a6a3dbcd",
  "1aa2389f602570",
  "16049bfcbb4eec",
  "085f4be779a84e",
  "05f389c2ee6043",
  "1e1417fd446fc8",
  "0027008fe2faf9",
  "0a4089c1d1ba93",
  "179c5355e4c03d",
  "0e27afeb62b671",
  "0ce119b6d57e26",
  "03ac9e8edeae20",
  "099a09697da63b",
  "0523478561b1df",
  "133da274a7621e",
  "00162d4483f1dc",
  "1f4030d67d1788",
  "022fb5d34a0fb8",
  "0f1f40c76a4fab",
  "069fc7f4dedca9",
  "096e6982b8f7d3",
  "07be242ed4cb4d",
  "1ae5930d30459b",
  "10f628064424da",
  "126afb0c3d108d",
  "070e532f4398be",
  "1e7cb2ea1d7aea",
  "1c92786d67a90b",
  "0042c8b0dbc7cc",
  "1c72c39f710bbb",
  "03c40c6671517a",
  "0ddc2239f8fed6",
  "18bef1a34fb32a",
  "199cad4b2fa210",
  "0c6f4618157976",
  "12cf42450d553b",
  "1b76eda138d077",
  "0dc691b5884bcd",
  "00dd768f806c1d",
  "08901db71f5cfc",
  "1313eec92d401f",
  "00aadee3d78d2e",
  "1da704f12ce7c1",
  "0e952a08a2c1bd",
  "154ec6e158f8ba",
  "0321dc4a266040",
  "123c934e613fdc",
  "1fd36a7cc18f69",
  "0b79d7bf7358c6",
  "1023b3b09d5e11",
  "1994f81e8636f1",
  "0daf49ecf7d2df",
  "1e9587cdd6bdd7",
  "1e284ca4a3423d",
  "0405f5b9a5e251",
  "00b44075614ccd",
  "169837d4e18ac5",
  "1952691be0cc07",
  "1fc5e3fcf790be",
  "0ff7536f9e8b37",
  "1c08b7e7ed8498",
  "08ea8752ade1ef",
  "03795e6ced827d",
  "10f69552f3d803",
  "19da0472814bae",
  "151d0d2f1d059c",
  "1b19c8171569ca",
  "0aa72f6a26db7e",
  "1a3f85850ae4a4",
  "1f40e98c36c377",
  "1613b9bd204e27",
  "0a3bd9a95a6f90",
  "0efcc5a1d40808",
  "1e1738df0b45da",
  "0f2f1fdf3dcc9e",
  "1c574559d2cf70",
  "031a3cfe22700c",
  "14ee78f7b90108",
  "1dcb3d1fbfb74e",
  "1bc4cd3d45ead7",
  "1667470f6055cb",
  "1417d1979976a8",
  "155fcaeed56be6",
  "06be3a6c6469b0",
  "0636c5e8f576a7",
  "101139cfc40652",
  "1dd6d2277a1dc8",
  "107b8d1b9beaae",
  "0c899f8d401940",
  "1fb27b55884625",
  "12e936fb87b7f6",
  "01ec0a1495fc3c",
  "0a3746b37d315c",
  "1b8f42fb0713fa",
  "14972aa3f06acf",
  "08050f7f6495ec",
  "181881f41a999c",
  "0883dac6baf369",
  "1b956175dadb93",
  "0791ce03e105c0",
  "0a67661fb354ec",
  "0c7c7891d675ab",
  "1742bda58ecf6e",
  "1f56b7ee8add7f",
  "07a38e203a54cd",
  "0707016f48df58",
  "19e6811a37b2d9",
  "0cb3b7860b1412",
  "0029a30b8c20de",
  "0ee17919795053",
  "0ea1865633d000",
  "16f9c0480b903d",
  "0cf1974c943a26",
  "1202dab3f24394",
  "04d04a27b070ef",
  "0f58c5d08ac9e0",
  "1223f57b94812e",
  "1d0cab7b9d421c",
  "149480a4a0ccef",
  "18c189019061ed",
  "082ebf4885d6c2",
  "15ee51a0703be5",
  "0e70319671fa71",
  "0e66012806bf98",
  "18c5f156a6c9df",
  "0ac8c1376d43c2",
  "04845edec85c5a",
  "1b96809b9c33df",
  "1eb63c3794de81",
  "10746fe417edad",
  "06e511b5f90142",
  "145b5951ae2735",
  "17f8e68d7e782c",
  "1b2fdec999b972",
  "0bb995639dfe8d",
  "0c8efbb146032b",
  "0781e8f4bf1573",
  "11fa9a34cc2b48",
  "1fd4756d3ce9bb",
  "18b32b3bcc255a",
  "04a0c9d9b114d7",
  "1c3a064089f63e",
  "0c225c0a6d0413",
  "133ead5c70bdee",
  "0e3a8338836748",
  "1a870e0e2168f0",
  "0f759e38ed072c",
  "1c1d4048ddd442",
  "088c164e3875f4",
  "19008235c949ab",
  "19dd2a8a0f06d3",
  "00247d6b2f38b1",
  "18615081f8d847",
  "06e422c9bef7c8",
  "13edae53052307",
  "13a023cb7733af",
  "1c76c584d5a6a9",
  "11146165f156ec",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "12b4b6a360d105",
  "108e9094e71276",
  "01b2af492c9815",
  "164acfadc229d3",
  "11145337e30c4a",
  "15db8bbe7c3eee",
  "084370b86a6756",
  "19c94adc45f7b1",
  "1ba552dc52f04e",
  "1007030e00fdc4",
  "13a7b1a81f49c6",
  "1346e45d92f87e",
  "0a9b5966fde713",
  "07f67bff9f3218",
  "060ad6cb28112f",
  "1bf637b4f53baf",
  "11b2c25f5b857c",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "1a4022d88c4664",
  "123ae2de91cb0f",
  "1389d8fbe3d1d7",
  "1896131012a071",
  "14bdb5ed135628",
  "1b8b88e2b59161",
  "14b7af2ac46b47",
  "19fe81306d9c47",
  "15d63cb1d5e66e",
  "022e59dc205d61",
  "0a2af90a72269f",
  "1d3a0099489da5",
  "08d45183dcd398",
  "1f29aac941495d",
  "06e650fcbd4258",
  "19665ba9607ccc",
  "16e29531272f46",
  "14be276eb26cdb",
  "042502798363a0",
  "04ce84f4edc46d",
  "008586f6e5016f",
  "1fd1cb52908921",
  "0fcd003aa134fd",
  "0cb2c1a6a3dbcd",
  "125dbaaacc6ada",
  "062a3b221afa5e",
  "0461bf4f76e5ce",
  "0a11b20f6f8421",
  "02fe5a1328f840",
  "0027008fe2faf9",
  "16b00af750951d",
  "065e70dc61cd8b",
  "09b9f6957e0275",
  "115289b128a9eb",
  "145375b3131731",
  "099a09697da63b",
  "1bad7695eb727d",
  "133da274a7621e",
  "1027d175414fd4",
  "18bfda5db6b7c0",
  "0f6a96864a7d1c",
  "11ee5b2ef8a84a",
  "1df30512265ee3",
  "16c1f7ed724256",
  "07be242ed4cb4d",
  "0e6180a4d204bd",
  "1fc8235f4e6e12",
  "126afb0c3d108d",
  "111b121baf1d29",
  "1e7cb2ea1d7aea",
  "0896eba65043ec",
  "0042c8b0dbc7cc",
  "0a1fd1a7f95e9f",
  "03c40c6671517a",
  "175c79f1c50360",
  "028eccb4d478f1",
  "0739140e48ed10",
  "0c6f4618157976",
  "0ffc50484d6866",
  "1b76eda138d077",
  "12c1fc9f7fc0d9",
  "004e300a6f7d87",
  "02ce6e7044cbb9",
  "1313eec92d401f",
  "1fcc44676f07a6",
  "1da704f12ce7c1",
  "1e1e93ff1af5b6",
  "1fe2840f959062",
  "0321dc4a266040",
  "1bb4d8b21fa683",
  "1954e0a9850b09",
  "047a62b9b02c4e",
  "1a6bbb5d9d94ea",
  "15830f3419d348",
  "1ba5e722b2e619",
  "065241a9c959ad",
  "0291eedc019155",
  "01e3368ba0baed",
  "00b44075614ccd",
  "04863f750ab0cc",
  "02edbbe9941b08",
  "1fc5e3fcf790be",
  "19127d4f8dda46",
  "111ef3f302ae86",
  "0ff89629c81485",
  "097a994b908d60",
  "03d468c993bd1c",
  "09a6812b9e250c",
  "16d3b2309aeac0",
  "0ff6fabc66b7ba",
  "0ee54fb969c364",
  "1a3f85850ae4a4",
  "0e4db3569f7cc6",
  "1613b9bd204e27",
  "0a3bd9a95a6f90",
  "0efcc5a1d40808",
  "1e1738df0b45da",
  "1947165702ac97",
  "1c574559d2cf70",
  "0b3ec2e0ea6e2f",
  "154a636b1a1f3d",
  "10ba1c2802515d",
  "1bc4cd3d45ead7",
  "1667470f6055cb",
  "033ca8dc6b9aef",
  "155fcaeed56be6",
  "0c44376eada360",
  "0783c69b15c18d",
  "0e197672f7af36",
  "1dd6d2277a1dc8",
  "107b8d1b9beaae",
  "0c899f8d401940",
  "1fb27b55884625",
  "12d71a8ace6731",
  "082e43ace66a07",
  "1d26559e1226c9",
  "10cce259f4d096",
  "14972aa3f06acf",
  "008d74ba2091b2",
  "1ac1c5677e4819",
  "0883dac6baf369",
  "001a9dad65f23d",
  "0791ce03e105c0",
  "1d986c7c1ea54b",
  "0fb51aa3efc7ba",
  "07be4ef8728833",
  "0ab2fc2fa7167b",
  "04eba5af6cbae0",
  "0707016f48df58",
  "19e6811a37b2d9",
  "19f8acc4450ec3",
  "0e85c71d729c78",
  "0b37efc186d79e",
  "0ea1865633d000",
  "064e9e20a2cb3e",
  "0cf1974c943a26",
  "1b7bbbae04faf2",
  "19bdf738ac2d5d",
  "0f58c5d08ac9e0",
  "1223f57b94812e",
  "1d0cab7b9d421c",
  "168027fa6cdd66",
  "18c189019061ed",
  "082ebf4885d6c2",
  "19884ca4bbf558",
  "070c1cf4f44b00",
  "0e66012806bf98",
  "02be43e84e6980",
  "041b18bac0fc6a",
  "189ac7d14cd787",
  "172d3cde768b9f",
  "0eb3ed56fcd01c",
  "17dedaf9e4f5cb",
  "089e333abbf3d6",
  "145b5951ae2735",
  "09476badc63922",
  "0c9a478b190f14",
  "0bb995639dfe8d",
  "0c8efbb146032b",
  "0781e8f4bf1573",
  "0be15362d6a5d7",
  "08d10a38c2c38b",
  "18b32b3bcc255a",
  "14435ab1785d15",
  "1c3a064089f63e",
  "1a81119a81e974",
  "133ead5c70bdee",
  "05e01678a68006",
  "1df3d4cc790ab6",
  "0389828a6c9919",
  "1c1d4048ddd442",
  "1cdd2b47efc949",
  "1f3d23736923b8",
  "192a31d6071c12",
  "0fad1ff3e96c11",
  "0c1e5dcea3bc4e",
  "06df1547ce295e",
  "13edae53052307",
  "13a023cb7733af",
  "1c76c584d5a6a9",
  "1e9d8faaad194a",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "04548bb22a644c",
  "09c06eafe64ddd",
  "01b2af492c9815",
  "1c862913173a2f",
  "11145337e30c4a",
  "1e8799430be7db",
  "1a2cf1329544d4",
  "0120b2dd32442a",
  "0fb908cd5a39b9",
  "11ec605b320f65",
  "1ab472389f2bc6",
  "0c65032775dffc",
  "0a9b5966fde713",
  "02caefbfe89a09",
  "150369c7fccae5",
  "1be9eb5d6b1dbc",
  "0cbee0eec7335a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "007888065a6c69",
  "1cf9cb89873bad",
  "0a5806060fdf3b",
  "0de8ca52c60003",
  "0dc4376245f7bf",
  "10195e3cd1bf44",
  "114cfa740894f9",
  "058ba98fa64a0a",
  "05ea4c33c872a4",
  "061ace5bbcc2d1",
  "1af42a88d2f9e8",
  "13c90d17a0c15e",
  "012f8d1d2cd7d5",
  "12d869350d5404",
  "001472540fa82a",
  "1a82cf7fce7e33",
  "0b0c61afc48da7",
  "020c617b35f3e4",
  "19297fd5991b81",
  "026d6fcc5fb0f6",
  "1a0aefa4f6a847",
  "13f6766fa50a57",
  "1c9ffb69bbf9e3",
  "0e88af0e1f9684",
  "0a0987b8d90f97",
  "1691fc7a200264",
  "1213d3c964de56",
  "16d6a050cd70c1",
  "1c71c6b0b5a719",
  "14bb494f5f85db",
  "14d46415d485c7",
  "1abdfaaa2d85af",
  "19a778539ed226",
  "1fa97c3252b717",
  "03a0742de4e639",
  "0c0f70eec31bd3",
  "148af4533d0dbf",
  "11a978b8d0b85d",
  "16e27a2d1a446c",
  "0c0f4d934a65c7",
  "0912d613e4f7b0",
  "1a376a83db3c5f",
  "14298e3129f4ff",
  "010dc8b96b5e40",
  "1f04f5b5bdf418",
  "0b753a5c173582",
  "1a156a0b43bde2",
  "19cd257a66e036",
  "02a7b50715edf6",
  "0cebae2feaf871",
  "1a62e792c82137",
  "003446afe93d47",
  "1814173ec806a7",
  "0014893cb59fcf",
  "16346cf48771a1",
  "1add2adf55b8f8",
  "1510213d7b0d64",
  "181e46ba659284",
  "1e3f84f7de4386",
  "0db352e2d96a43",
  "00f2608f2bf78f",
  "1821e031fb255d",
  "1f1731499c27ff",
  "0912504ac3dd0a",
  "0b3efb2a0b4b43",
  "154c3739d2ef5b",
  "12b00e8f1c105e",
  "09cd0d2ef15dfe",
  "18b4234434f8a4",
  "0753418409eabd",
  "1d0c17097a473f",
  "1dec5c9732c074",
  "14c4580d6c9562",
  "12c1f3b4314f0f",
  "07b74a59b2d1e9",
  "0199bfbf94af92",
  "13ecd9090c0d33",
  "1dcbe83f9e385c",
  "01be1493d76a8d",
  "058084414b4162",
  "09f1588e8e54f7",
  "04bfc1e337abd1",
  "1278a4d2af98be",
  "1daab191b88b83",
  "0bb70711cfd937",
  "07796e8f46a69d",
  "0046d93e3102b7",
  "03e9a2ec29b7b3",
  "11d875c5c4b7fd",
  "0839283717d9d2",
  "00207e514bf1b0",
  "0d8fa307a58ccd",
  "046c23dcba92bf",
  "135396f0e936cd",
  "194be5fdc6a242",
  "05416aea7f910e",
  "0bddbd7fb675f1",
  "119d9709aacb54",
  "10c3b4f10dfd41",
  "155f371315febc",
  "0425928d9579fc",
  "1ff3d7a48a1480",
  "092d4f4a6feafd",
  "1cd71ac7f6d475",
  "0b0c6322812f00",
  "0a73c702d02835",
  "17fcb9f691c86c",
  "16e4c35827e8c9",
  "0f6fe148dbf89b",
  "0bf8c8a8472dec",
  "019c89f09436ff",
  "0aaea02b18c797",
  "1e7f8fc9042a64",
  "06800fc7e4f469",
  "09d3fe3a33b92f",
  "1670427667a949",
  "17791f4abe03f1",
  "0657e7c03900ff",
  "01604f6b6caf07",
  "09001cd7dfdb9d",
  "1ef55ec08e8fc3",
  "1505f55e8ce9c3",
  "032a44c3458a76",
  "0c872a12092c76",
  "120616b63e336a",
  "1f989c7e6aeddf",
  "0efe12b13656df",
  "0639b9382034d3",
  "0e5180662a4fd9",
  "0d5b7c92a03e1c",
  "0b6f992e6aea5a",
  "16e07649fd1149",
  "064b7d788b06d5",
  "04426af2de72c5",
  "11c13f306a7d68",
  "1832573acb5e3a",
  "12e9f50b9c2b77",
  "170753b2a7bf39",
  "041c2834d3f0ae",
  "01e23d1bbfecab",
  "180b71a35f8473",
  "0beff19df55e26",
  "0a1664372d5768",
  "07b6fc5e9fb579",
  "0c5f851e4b5725",
  "10e4d33c63493d",
  "037f731d280bd0",
  "0f8a8695d1bfdb",
  "0f22ff9ea42a6b",
  "148428b1731bc1",
  "12f5c5fbbcef52",
  "1f29b7d4af0425",
  "1739e58bd5efb5",
  "05609a933db893",
  "1a44e27e637a14",
  "002acae4387d52",
  "18fbc5f14b4376",
  "091755a7e5240e",
  "1651261ddd8153",
  "1c7e6f0bbd80f5",
  "12ce427f676bee",
  "0aa54d87a812c1",
  "0290c87edef47e",
  "01ead5751f39df",
  "1368af28db2e6d",
  "1fded2c4d8f55c",
  "013114450e8026",
  "1d7a721924d0bf",
  "154c5fbb9a0a3a",
  "1cbf452457611c",
  "0d3bda34d9de6f",
  "0a45dc5319fffc",
  "1f160202adda58",
  "11f3c4272121e8",
  "003b967792193d",
  "08a95a102e8d9c",
  "1726dea2f85c6f",
  "106fc800344e5b",
  "02a13eb79aefbf",
  "020aec48a01ac4",
  "1e2b27cf3da959",
  "167bf84179b851",
  "14193af16dac0a",
  "0b4c6856dcec8b",
  "0bac582712dee5",
  "1f18ea90ca9803",
  "1d9e03cb3bac26",
  "1a2ceb652ba31a",
  "16bec778a5e905",
  "10e0cfc5e5e117",
  "0615b948a32d94",
  "09ee5ff8c6a9fe",
  "0b88966d2197d7",
  "0ab681d596dd95",
  "047582fa9c35ee",
  "0e9a47979534bd",
  "10019e8fb899cb",
  "0b6d41ef18c338",
  "00df07c0cc3acf",
  "0658601fb9402e",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "0c404534faa95c",
  "169efb69076ee9",
  "07200219f106be",
  "1d007c8e8ce1e1",
  "1421ffb42c68c9",
  "050d9d0dd0dc49",
  "114cfa740894f9",
  "1cd1523fe91f58",
  "05ea4c33c872a4",
  "166fd10d89e18d",
  "1b943edee0c398",
  "14cede1ee045fb",
  "0b9772b27fe937",
  "1d2ec4cb4480fb",
  "0933766c7ff52e",
  "04dbe0b8f8aa06",
  "0b0c61afc48da7",
  "100d1b6daf9e01",
  "0a19207104d1ed",
  "0563a4c5ec4faa",
  "11b1cd8e8b6fd5",
  "1379427a69deee",
  "08d5e808d9c3d3",
  "1329a68ee47e20",
  "06e53e968ce9a7",
  "12b6de60fdc257",
  "0d05b272427e76",
  "09f9532749e295",
  "0ce660afe3ff67",
  "1c83d502ffc7a2",
  "1550928ac58f8e",
  "0b427994d31ce1",
  "0719d707799b28",
  "0252818dc06602",
  "087b0400ff09b8",
  "0c0f70eec31bd3",
  "1a665f44a0eb7b",
  "1f08ada865cec7",
  "15059dbc9da505",
  "189585d1efa5b5",
  "094141d2b5d1fc",
  "0bb9780726f334",
  "0d39c91121fba8",
  "10962683cb73a4",
  "19da289b2d6af0",
  "0ab71e2fb459dd",
  "18896e15d57738",
  "19cd257a66e036",
  "01b73261abe62f",
  "03ec36a6fdddd7",
  "0993e2d9731bfb",
  "003446afe93d47",
  "198d58a2d44555",
  "0014893cb59fcf",
  "1c1bdc339d944c",
  "1137082cd7346f",
  "00f3d2b0ac3577",
  "181e46ba659284",
  "0dc351804d9b14",
  "04214d18925180",
  "0a3a2144e69143",
  "19a5983c4ac86f",
  "026548ccdc6176",
  "0912504ac3dd0a",
  "05d0d4e1be7daf",
  "154c3739d2ef5b",
  "1484d00dd65b9a",
  "086ff73f0fbc19",
  "0806aa6fb20444",
  "19a4d0c8ce0c68",
  "133b3ec24dd875",
  "14a6bc28924a17",
  "128ec87156351a",
  "1e1e65ebe57f28",
  "1a80fbf2833820",
  "12666ef88317ab",
  "1b4cef624283ed",
  "05539a92e3d1fc",
  "09bea5bd7de875",
  "175f67ed33a6c8",
  "089066dd9475ba",
  "04bfc1e337abd1",
  "01ca1edcd9a809",
  "077e0e213f9e51",
  "0fc2d0c60c1ee4",
  "06c1b6b5681d5e",
  "0871f51a3c0b05",
  "176b43e310f8aa",
  "16fc4b9be7cc0d",
  "146d0e63b90e8e",
  "0d2ed9e6e15a0d",
  "13e3bfc30753ad",
  "0d3b85d9b75bc0",
  "12d7e461ce083d",
  "1274ce9edf0115",
  "085969cb262676",
  "17a30b17475d6c",
  "0631b331cb3abd",
  "10c3b4f10dfd41",
  "1d32ae77deb7de",
  "0d72575de55035",
  "140647674bbaeb",
  "092d4f4a6feafd",
  "1db9bec32c7c47",
  "1c78eae9acc456",
  "1e3217e85c5d65",
  "0268d7f0dafe95",
  "03611190f65d94",
  "00242089fa35ca",
  "0ba6b65daa3f7f",
  "0209ebfa18f4c8",
  "0aaea02b18c797",
  "0d3ab85ca9969c",
  "1000c09deac4d6",
  "064acfd7205064",
  "01b5f9b8820717",
  "1ccc7305839ccc",
  "0dd614a4c31a72",
  "0d925fecc546af",
  "05d8fe5016e381",
  "1ef55ec08e8fc3",
  "161fa941011420",
  "032a44c3458a76",
  "0e1368051a2c25",
  "0cc7cfae855781",
  "0ea5c5cb43d635",
  "09a74ef7b307b6",
  "0495e34f58bae2",
  "015193dd737374",
  "0d5b7c92a03e1c",
  "163a349dacf3ed",
  "0e03d598e5039f",
  "135677df396080",
  "04add80d2d4926",
  "135a0d8aefd560",
  "1832573acb5e3a",
  "0b85461b72c976",
  "0993a3ca4b4dba",
  "0667cb98c453e7",
  "1d735afd029df7",
  "180b71a35f8473",
  "100b841034c218",
  "0a1664372d5768",
  "048ec17b61e846",
  "1c6e67b1aaf84b",
  "165916c5b07d61",
  "037f731d280bd0",
  "101bb78b4e41dd",
  "1f3f101ced7faa",
  "09014c9469f8dd",
  "1eb9c40c237a82",
  "13bf5463ed1c06",
  "0979766ecb6833",
  "137affe39ef814",
  "00bc0f2ca05277",
  "0003c0f3ecf31f",
  "086dc402b7ae71",
  "1e58ec3f7aaacb",
  "1296a8e0c64ae9",
  "008c3c33ea5762",
  "198c4205addc9c",
  "10c30b238be529",
  "09c175d9ba1f7f",
  "081f554f39b8b8",
  "1368af28db2e6d",
  "1c831859359e34",
  "013114450e8026",
  "0827a12da32b7d",
  "0975aba2512be6",
  "162862e86110b0",
  "0d3bda34d9de6f",
  "0aa83edb8946b9",
  "0a5456aa0ffabd",
  "13bbaf23954914",
  "1e70ff54d1ae2d",
  "02be83537c3936",
  "13a45c211ac45d",
  "0fab26164d82ab",
  "02a13eb79aefbf",
  "1ea83f66697a85",
  "1806a4cd8e1caa",
  "167bf84179b851",
  "14193af16dac0a",
  "172836270bd683",
  "1c399895652cb9",
  "08bc1f50ee610b",
  "00b5f256319e32",
  "027aba056966f6",
  "1daef998c85961",
  "1ea8cb844428f2",
  "11d4678f66c376",
  "057b775bd8a836",
  "072e66845934ba",
  "151f9053bb1b50",
  "11d802dd56e011",
  "0e9a47979534bd",
  "1173e12147ab63",
  "03df222b32978b",
  "05cd78a1c25a01",
  "16022d061fe811",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "007888065a6c69",
  "169efb69076ee9",
  "0a5806060fdf3b",
  "0de8ca52c60003",
  "0dc4376245f7bf",
  "10195e3cd1bf44",
  "114cfa740894f9",
  "058ba98fa64a0a",
  "05ea4c33c872a4",
  "166fd10d89e18d",
  "1b943edee0c398",
  "13c90d17a0c15e",
  "012f8d1d2cd7d5",
  "12d869350d5404",
  "001472540fa82a",
  "1a82cf7fce7e33",
  "0b0c61afc48da7",
  "020c617b35f3e4",
  "19297fd5991b81",
  "026d6fcc5fb0f6",
  "1a0aefa4f6a847",
  "1379427a69deee",
  "1c9ffb69bbf9e3",
  "1329a68ee47e20",
  "0a0987b8d90f97",
  "1691fc7a200264",
  "1213d3c964de56",
  "16d6a050cd70c1",
  "1c71c6b0b5a719",
  "1c83d502ffc7a2",
  "14d46415d485c7",
  "1abdfaaa2d85af",
  "19a778539ed226",
  "1fa97c3252b717",
  "03a0742de4e639",
  "0c0f70eec31bd3",
  "148af4533d0dbf",
  "1f08ada865cec7",
  "16e27a2d1a446c",
  "0c0f4d934a65c7",
  "0912d613e4f7b0",
  "1a376a83db3c5f",
  "14298e3129f4ff",
  "010dc8b96b5e40",
  "19da289b2d6af0",
  "0b753a5c173582",
  "1a156a0b43bde2",
  "19cd257a66e036",
  "02a7b50715edf6",
  "03ec36a6fdddd7",
  "1a62e792c82137",
  "003446afe93d47",
  "1814173ec806a7",
  "0014893cb59fcf",
  "16346cf48771a1",
  "1add2adf55b8f8",
  "1510213d7b0d64",
  "181e46ba659284",
  "1e3f84f7de4386",
  "04214d18925180",
  "00f2608f2bf78f",
  "1821e031fb255d",
  "1f1731499c27ff",
  "0912504ac3dd0a",
  "0b3efb2a0b4b43",
  "154c3739d2ef5b",
  "12b00e8f1c105e",
  "09cd0d2ef15dfe",
  "0806aa6fb20444",
  "0753418409eabd",
  "1d0c17097a473f",
  "1dec5c9732c074",
  "14c4580d6c9562",
  "12c1f3b4314f0f",
  "07b74a59b2d1e9",
  "0199bfbf94af92",
  "13ecd9090c0d33",
  "1dcbe83f9e385c",
  "09bea5bd7de875",
  "058084414b4162",
  "09f1588e8e54f7",
  "04bfc1e337abd1",
  "1278a4d2af98be",
  "1daab191b88b83",
  "0bb70711cfd937",
  "07796e8f46a69d",
  "0046d93e3102b7",
  "03e9a2ec29b7b3",
  "11d875c5c4b7fd",
  "0839283717d9d2",
  "00207e514bf1b0",
  "13e3bfc30753ad",
  "046c23dcba92bf",
  "12d7e461ce083d",
  "1274ce9edf0115",
  "085969cb262676",
  "17a30b17475d6c",
  "119d9709aacb54",
  "10c3b4f10dfd41",
  "155f371315febc",
  "0425928d9579fc",
  "1ff3d7a48a1480",
  "092d4f4a6feafd",
  "1db9bec32c7c47",
  "0b0c6322812f00",
  "1e3217e85c5d65",
  "17fcb9f691c86c",
  "16e4c35827e8c9",
  "0f6fe148dbf89b",
  "0ba6b65daa3f7f",
  "0209ebfa18f4c8",
  "0aaea02b18c797",
  "0d3ab85ca9969c",
  "06800fc7e4f469",
  "09d3fe3a33b92f",
  "1670427667a949",
  "17791f4abe03f1",
  "0dd614a4c31a72",
  "01604f6b6caf07",
  "09001cd7dfdb9d",
  "1ef55ec08e8fc3",
  "1505f55e8ce9c3",
  "032a44c3458a76",
  "0c872a12092c76",
  "120616b63e336a",
  "1f989c7e6aeddf",
  "0efe12b13656df",
  "0639b9382034d3",
  "015193dd737374",
  "0d5b7c92a03e1c",
  "0b6f992e6aea5a",
  "16e07649fd1149",
  "064b7d788b06d5",
  "04add80d2d4926",
  "11c13f306a7d68",
  "1832573acb5e3a",
  "12e9f50b9c2b77",
  "170753b2a7bf39",
  "0667cb98c453e7",
  "1d735afd029df7",
  "180b71a35f8473",
  "0beff19df55e26",
  "0a1664372d5768",
  "048ec17b61e846",
  "0c5f851e4b5725",
  "10e4d33c63493d",
  "037f731d280bd0",
  "0f8a8695d1bfdb",
  "0f22ff9ea42a6b",
  "148428b1731bc1",
  "12f5c5fbbcef52",
  "1f29b7d4af0425",
  "1739e58bd5efb5",
  "05609a933db893",
  "00bc0f2ca05277",
  "002acae4387d52",
  "18fbc5f14b4376",
  "1e58ec3f7aaacb",
  "1296a8e0c64ae9",
  "008c3c33ea5762",
  "12ce427f676bee",
  "0aa54d87a812c1",
  "09c175d9ba1f7f",
  "01ead5751f39df",
  "1368af28db2e6d",
  "1fded2c4d8f55c",
  "013114450e8026",
  "1d7a721924d0bf",
  "154c5fbb9a0a3a",
  "1cbf452457611c",
  "0d3bda34d9de6f",
  "0a45dc5319fffc",
  "1f160202adda58",
  "11f3c4272121e8",
  "003b967792193d",
  "08a95a102e8d9c",
  "1726dea2f85c6f",
  "0fab26164d82ab",
  "02a13eb79aefbf",
  "1ea83f66697a85",
  "1e2b27cf3da959",
  "167bf84179b851",
  "14193af16dac0a",
  "0b4c6856dcec8b",
  "0bac582712dee5",
  "08bc1f50ee610b",
  "1d9e03cb3bac26",
  "027aba056966f6",
  "16bec778a5e905",
  "10e0cfc5e5e117",
  "0615b948a32d94",
  "09ee5ff8c6a9fe",
  "0b88966d2197d7",
  "0ab681d596dd95",
  "047582fa9c35ee",
  "0e9a47979534bd",
  "10019e8fb899cb",
  "0b6d41ef18c338",
  "00df07c0cc3acf",
  "0658601fb9402e",
]
`;
